# Indexer-with-benifit

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
docs/: phase1.md  phase2.md  phase3.md  phase3_optimization.md
idls/: pump_fun.json
migrations/: 001_init.sql  002_rebuild_schema.sql  003_indexer_state.sql  004_raydium_swaps.sql  005_jupiter_swaps.sql  006_dlq.sql  007_pump_fun_trades.sql
sol-indexer/: .gitignore  Cargo.toml  LICENSE  README.md  geyser.json
sol-indexer/migrations/: 20251228041824_init.sql  20251229042242_init_indexer_state.sql  20260102131945_add_radiyum_swaps.sql  20260104021520_add_jupiter_swaps.sql  20260104060420_init_dlq.sql  20260104120554_init_pump_fun_trade.sql
sol-indexer/scripts/: package-lock.json  package.json  tsconfig.tsbuildinfo
sol-indexer/scripts/src/: simulateTokenTransfer.ts
sol-indexer/src/: main.rs
sol-indexer/src/adapters/: mod.rs
sol-indexer/src/application/: error.rs  mod.rs
sol-indexer/src/domain/: constants.rs  mod.rs  models.rs  tokenizer.rs
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/inbound/: file_source.rs  grpc_source.rs  mod.rs  rpc_source.rs
src/adapters/outbound/: mod.rs  postgres_repository.rs  telegram.rs
src/adapters/parsers/: jupiter.rs  mod.rs  pump_fun.rs  raydium_amm.rs  spl_token.rs  vixen_utils.rs
src/application/: error.rs  mod.rs
src/application/ports/: buffer.rs  event_repository.rs  input.rs  mod.rs  notifier.rs  output.rs  parser.rs
src/application/use_cases/: mod.rs  (+1 more)
src/domain/: constants.rs  models.rs  tokenizer.rs
src/infrastructure/: mod.rs
(+25 files in other folders)
