[package]
name = "my-solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = {version = "1.48.0",features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["env-filter"]}
