[package]
name = "my-solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = {version = "1.48.0",features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["env-filter"]}

# Parsing dependencies
solana-sdk = "2.1.0"
solana-client = "2.1.0"
solana-transaction-status = "2.1.0"
yellowstone-grpc-proto = "4.0.0"
prost = "0.13.0"
bs58 = "0.5.1"
bincode = "1.3.3"
borsh = { version = "1.5.3", features = ["derive"] }

# gRPC dependencies
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
tokio-stream = "0.1.17"
